# patent-examiner

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_init.sql
opensearch/: chunks_mapping.json
patent_mvp/: __init__.py  __main__.py  chunker.py  chunking.py  config.py  db.py  downloader.py  embeddings.py  ingest.py  models.py  parser.py  retrieval.py  search.py  search_index.py  storage.py  text_utils.py
tests/: test_chunker.py  test_chunking.py  test_downloader.py  test_embeddings.py  test_ingest_smoke.py  test_parser.py  test_retrieval.py  test_search.py
tests/fixtures/: odp_dataset_page.html  odp_search_response.json  sample_patent.xml  sample_patent_variant.xml
