[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-mvp"
version = "0.1.0"
description = "MVP local patent retrieval layer for CPC G06F grants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.26",
  "lxml>=5.1",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2",
  "opensearch-py>=2.4",
  "sentence-transformers>=3.0",
  "numpy>=1.26",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["patent_mvp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
